--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>David J Dumas</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -18,7 +18,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <p class="text-center intro1">full stack web development student</p>
+                    <p class="text-center intro1">full stack web development student<br>nov '18 - may '19</p>
                 </div>
             </div>
             <div class="row">
@@ -27,8 +27,47 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col hr1">
-                    <hr class="hr2">
+                <div class="col">
+                    <hr class="hr1">
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col"></div>
+                <div class="col textRow">
+                    <p class="text-center knowledge1">looking back:<br><br>html, css, bootstrap, javascript, jquery, moment.js, apis, firebase</p>
+                </div>
+                <div class="col">
+                    <p class="text-left knowledge"></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col"></div>
+                <div class="col">
+                    <p class="text-center knowledge2">looking forward:<br><br>node.js, react.js, react hooks, mysql, node servers, mongo, etc</p>
+                </div>
+                <div class="col text-left knowledge">
+                    
+                </div>
+            </div>
+            <br>
+            <div class="container">
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col">
+                        <p class="text-center bottomRow">projects</p>
+                    </div>
+                    <div class="col">
+                        <p class="text-center bottomRow">goals</p>
+                    </div>
+                    <div class="col">
+                        <p class="text-center bottomRow">interests</p>
+                    </div>
+                    <div class="col">
+                        <p class="text-center bottomRow">contact</p>
+                    </div>
+                    <div class="col"></div>
                 </div>
             </div>
         </div>
