organizes files in folders and added code

--- a/other pages/HTML/projects.html
+++ b/other pages/HTML/projects.html
@@ -3,61 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>David J Dumas</title>
+        <title>Projects</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./projects.css">
     </head>
     <body>
         <div class="container-fluid bodyContainer">
-            <div class="row">
-                <div class="col nameCol">
-                    <p class="text-center">David Dumas</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <p class="text-center intro1">full stack web development student<br>nov '18 - may '19</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <p class="text-center intro2">uc berkeley ext.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <hr class="hr1">
-                </div>
-            </div>
-            <br>
-            <br>
-            <div class="row">
-                <div class="col"></div>
-                <div class="col textRow">
-                    <p class="text-center knowledge1">looking back:<br><br>html, css, bootstrap, javascript, jquery, moment.js, apis, firebase</p>
-                </div>
-                <div class="col">
-                    <p class="text-left knowledge"></p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col"></div>
-                <div class="col">
-                    <p class="text-center knowledge2">looking forward:<br><br>node.js, react.js, react hooks, mysql, node servers, mongo, etc</p>
-                </div>
-                <div class="col text-left knowledge">
-                    
-                </div>
-            </div>
-            <br>
             <div class="container">
                 <div class="row">
                     <div class="col"></div>
                     <div class="col">
-                        <a href="./other pages/projects.html">A</a>
-                        <p class="text-center bottomRow bottomRowProjects">projects</p>
+                        <p class="text-center bottomRow">projects</p>
                     </div>
                     <div class="col">
                         <p class="text-center bottomRow">goals</p>
@@ -80,6 +38,6 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="./javascript.js" async defer></script>
+        <script src="./projects.js" async defer></script>
     </body>
 </html>
