Links all pages and basic code for visuals

--- a/index.html
+++ b/index.html
@@ -54,21 +54,18 @@
             <br>
             <div class="container">
                 <div class="row">
-                    <div class="col"></div>
-                    <div class="col">
-                        <a href="./other pages/projects.html">A</a>
-                        <p class="text-center bottomRow bottomRowProjects">projects</p>
+                    <div class="col-3 text-center">
+                        <a class="bottomRow bottomRowProjects" href="./other pages/HTML/projects.html">projects</a>
                     </div>
-                    <div class="col">
-                        <p class="text-center bottomRow">goals</p>
+                    <div class="col-3 text-center">
+                        <a class="bottomRow bottomRowGoals" href="./other pages/HTML/goals.html">goals</a>
                     </div>
-                    <div class="col">
-                        <p class="text-center bottomRow">interests</p>
+                    <div class="col-3 text-center">
+                        <a class="bottomRow bottomRowInterests" href="./other pages/HTML/interests.html">interests</a>
                     </div>
-                    <div class="col">
-                        <p class="text-center bottomRow">contact</p>
+                    <div class="col-3 text-center">
+                        <a class="bottomRow bottomRowInterests" href="./other pages/HTML/contact.html">contact</a>
                     </div>
-                    <div class="col"></div>
                 </div>
             </div>
         </div>
