--- a/other pages/HTML/projects.html
+++ b/other pages/HTML/projects.html
@@ -7,37 +7,38 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="./projects.css">
+        <link rel="stylesheet" href="../CSS/projects.css">
     </head>
     <body>
         <div class="container-fluid bodyContainer">
+            <div class="row">
+                <div class="col nameCol">
+                    <p class="text-center">David Dumas</p>
+                </div>
+            </div>
             <div class="container">
                 <div class="row">
-                    <div class="col"></div>
-                    <div class="col">
-                        <p class="text-center bottomRow">projects</p>
+                    <div class="col-3 text-center">
+                        <a class="text-center bottomRow bottomRowProjects" href="./projects.html">projects</a>
                     </div>
-                    <div class="col">
-                        <p class="text-center bottomRow">goals</p>
+                    <div class="col-3 text-center">
+                        <a class="text-center bottomRow bottomRowGoals" href="./goals.html">goals</a>
                     </div>
-                    <div class="col">
-                        <p class="text-center bottomRow">interests</p>
+                    <div class="col-3 text-center">
+                        <a class="text-center bottomRow bottomRowInterests" href="./interests.html">interests</a>
                     </div>
-                    <div class="col">
-                        <p class="text-center bottomRow">contact</p>
+                    <div class="col-3 text-center">
+                        <a class="text-center bottomRow bottomRowInterests" href="./contact.html">contact</a>
                     </div>
-                    <div class="col"></div>
                 </div>
             </div>
         </div>
+
+
         
-        
-
-
-
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="./projects.js" async defer></script>
+        <script src="../JS/projects.js" async defer></script>
     </body>
 </html>
