Project page Mobile test push

--- a/other pages/HTML/projects.html
+++ b/other pages/HTML/projects.html
@@ -18,6 +18,31 @@
             </div>
             <div class="container">
                 <div class="row">
+                    <div class="col text-center bottomRow">
+                        <p>The images below are screen shots of the projects I've done or am working on. Feel free to explore.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col text-center">
+                        <a href="https://ddumas551.github.io/5StarMovingSchedule/">
+                            <img class="fiveStarImg" src="../Photos/5StarScheduleImg.png" alt="5StarScheduleImg">
+                        </a>
+                        <figcaption class="bottomRow">Scheduling app under contruction.
+                            <br>Will allow for job info to be sent as a text
+                            <br>message through email<br>---------------<br>
+                            Personal Project</figcaption>
+                    </div>
+                    <div class="col text-center">
+                        <a href="https://ddumas551.github.io/5StarMovingSchedule/">
+                            <img class="fiveStarImg" src="../Photos/5StarScheduleImg.png" alt="5StarScheduleImg">
+                        </a>
+                        <figcaption class="bottomRow">Scheduling app
+                            <br>Will allow for job info to be sent as a text
+                            <br>message through email<br>---------------<br>
+                            Personal Project || Under Construction</figcaption>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-3 text-center">
                         <a class="text-center bottomRow bottomRowProjects" href="./projects.html">projects</a>
                     </div>
