--- a/other pages/HTML/projects.html
+++ b/other pages/HTML/projects.html
@@ -24,13 +24,26 @@
                 </div>
                 <div class="row">
                     <div class="col text-center">
-                        <a href="https://ddumas551.github.io/5StarMovingSchedule/">
-                            <img class="fiveStarImg" src="../Photos/5StarScheduleImg.png" alt="5StarScheduleImg">
+                        <a href="https://ddumas551.github.io/Train-Schedule/">
+                            <img class="fiveStarImg" src="../Photos/image (1).png" alt="5StarScheduleImg">
                         </a>
-                        <figcaption class="bottomRow">Scheduling app under contruction.
-                            <br>Will allow for job info to be sent as a text
-                            <br>message through email<br>---------------<br>
-                            Personal Project</figcaption>
+                        <figcaption class="bottomRow">Mock Train Schedule
+                            <br>Uses Firebase and Moment.js
+                            <br>
+                            <br>---------------<br>
+                            <br>
+                            Class Project || Completed</figcaption>
+                    </div>
+                    <div class="col text-center">
+                        <a href="https://ddumas551.github.io/TrailMix/">
+                            <img class="fiveStarImg" src="../Photos/image (1).png" alt="5StarScheduleImg">
+                        </a>
+                        <figcaption class="bottomRow">Location Based Hiking App
+                            <br>Uses multiple APIs to find hikes near the user
+                            <br>and Firebase for storing user comments.
+                            <br>Currently hard coded for Berkeley, CA
+                            <br>---------------<br>
+                            Group Project || Under Construction</figcaption>
                     </div>
                     <div class="col text-center">
                         <a href="https://ddumas551.github.io/5StarMovingSchedule/">
@@ -38,7 +51,8 @@
                         </a>
                         <figcaption class="bottomRow">Scheduling app
                             <br>Will allow for job info to be sent as a text
-                            <br>message through email<br>---------------<br>
+                            <br>message through email
+                            <br>---------------<br>
                             Personal Project || Under Construction</figcaption>
                     </div>
                 </div>
