--- a/index.html
+++ b/index.html
@@ -54,19 +54,22 @@
             <br>
             <div class="container">
                 <div class="row">
-                    <div class="col-3 text-center">
+                    <div class="col text-center">
                         <a class="bottomRow bottomRowProjects" href="./other pages/HTML/projects.html">projects</a>
                     </div>
-                    <div class="col-3 text-center">
+                    <!-- <div class="col-3 text-center">
                         <a class="bottomRow bottomRowGoals" href="./other pages/HTML/goals.html">goals</a>
-                    </div>
-                    <div class="col-3 text-center">
+                    </div> -->
+                    <div class="col text-center">
                         <a class="bottomRow bottomRowInterests" href="./other pages/HTML/interests.html">interests</a>
                     </div>
-                    <div class="col-3 text-center">
+                    <div class="col text-center">
                         <a class="bottomRow bottomRowInterests" href="./other pages/HTML/contact.html">contact</a>
                     </div>
                 </div>
+                <br>
+                <br>
+                <br>
             </div>
         </div>
         
