--- a/other pages/HTML/contact.html
+++ b/other pages/HTML/contact.html
@@ -16,18 +16,39 @@
                     <p class="text-center">David Dumas</p>
                 </div>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <div class="container">
                 <div class="row">
-                    <div class="col-3 text-center">
+                    <div class="col text-center">
                         <a class="text-center bottomRow bottomRowProjects" href="./projects.html">projects</a>
                     </div>
-                    <div class="col-3 text-center">
+                    <!-- <div class="col text-center">
                         <a class="text-center bottomRow bottomRowGoals" href="./goals.html">goals</a>
-                    </div>
-                    <div class="col-3 text-center">
+                    </div> -->
+                    <div class="col text-center">
                         <a class="text-center bottomRow bottomRowInterests" href="./interests.html">interests</a>
                     </div>
-                    <div class="col-3 text-center">
+                    <div class="col text-center">
                         <a class="text-center bottomRow bottomRowInterests" href="./contact.html">contact</a>
                     </div>
                 </div>
