--- a/other pages/HTML/projects.html
+++ b/other pages/HTML/projects.html
@@ -19,13 +19,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col text-center bottomRow">
-                        <p>The images below are screen shots of the projects I've done or am working on. Feel free to explore.</p>
+                        <p>The images below are screen shots of the projects I've done, worked on, or am working on. Feel free to explore.</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col text-center">
+                            <p class="bottomRow">Train Schedule</p>
                         <a href="https://ddumas551.github.io/Train-Schedule/">
-                            <img class="fiveStarImg" src="../Photos/image (1).png" alt="5StarScheduleImg">
+                            <img class="fiveStarImg" src="../Photos/trainSchedule.png" alt="trainSchedule">
                         </a>
                         <figcaption class="bottomRow">Mock Train Schedule
                             <br>Uses Firebase and Moment.js
@@ -35,8 +36,9 @@
                             Class Project || Completed</figcaption>
                     </div>
                     <div class="col text-center">
+                        <p class="bottomRow">TrailMix</p>
                         <a href="https://ddumas551.github.io/TrailMix/">
-                            <img class="fiveStarImg" src="../Photos/image (1).png" alt="5StarScheduleImg">
+                            <img class="fiveStarImg" src="../Photos/TrailMix.png" alt="TrailMixSC">
                         </a>
                         <figcaption class="bottomRow">Location Based Hiking App
                             <br>Uses multiple APIs to find hikes near the user
@@ -46,27 +48,37 @@
                             Group Project || Under Construction</figcaption>
                     </div>
                     <div class="col text-center">
+                        <p class="bottomRow">5 Star Scheduling</p>
                         <a href="https://ddumas551.github.io/5StarMovingSchedule/">
                             <img class="fiveStarImg" src="../Photos/5StarScheduleImg.png" alt="5StarScheduleImg">
                         </a>
                         <figcaption class="bottomRow">Scheduling app
                             <br>Will allow for job info to be sent as a text
-                            <br>message through email
+                            <br>message through email to employees
+                            <br>
                             <br>---------------<br>
                             Personal Project || Under Construction</figcaption>
                     </div>
                 </div>
+                <br>
+                <br>
                 <div class="row">
-                    <div class="col-3 text-center">
+                    <div class="col">
+                        <hr class="hr1">
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col text-center">
                         <a class="text-center bottomRow bottomRowProjects" href="./projects.html">projects</a>
                     </div>
-                    <div class="col-3 text-center">
+                    <!-- <div class="col text-center">
                         <a class="text-center bottomRow bottomRowGoals" href="./goals.html">goals</a>
-                    </div>
-                    <div class="col-3 text-center">
+                    </div> -->
+                    <div class="col text-center">
                         <a class="text-center bottomRow bottomRowInterests" href="./interests.html">interests</a>
                     </div>
-                    <div class="col-3 text-center">
+                    <div class="col text-center">
                         <a class="text-center bottomRow bottomRowInterests" href="./contact.html">contact</a>
                     </div>
                 </div>
