Good save point

--- a/other pages/HTML/contact.html
+++ b/other pages/HTML/contact.html
@@ -21,14 +21,9 @@
             <br>
             <br>
 
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <a href="../Photos/Web Dev Resume V1.pdf" download>
+                <img class="pdfImg" src="../Photos/pdf dload.jpeg">
+            </a>
             <br>
             <br>
             <br>
@@ -52,6 +47,9 @@
                         <a class="text-center bottomRow bottomRowInterests" href="./contact.html">contact</a>
                     </div>
                 </div>
+                <br>
+                <br>
+                <br>
             </div>
         </div>
 
