Adds some contact page content

--- a/other pages/HTML/projects.html
+++ b/other pages/HTML/projects.html
@@ -13,7 +13,9 @@
         <div class="container-fluid bodyContainer">
             <div class="row">
                 <div class="col nameCol">
-                    <p class="text-center">David Dumas</p>
+                    <a href="davidjdumas.dev">
+                        <p class="text-center makeNotBlue">David Dumas</p>
+                    </a>
                 </div>
             </div>
             <div class="container">
