--- a/other pages/HTML/contact.html
+++ b/other pages/HTML/contact.html
@@ -16,22 +16,31 @@
                     <p class="text-center">David Dumas</p>
                 </div>
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
-
-            <a href="../Photos/Web Dev Resume V1.pdf" download>
-                <img class="pdfImg" src="../Photos/pdf dload.jpeg">
-            </a>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <hr class="hr1">
+            <div class="container">
+                <br>
+                <br>
+                <p class="text-center contactInvitation">You're invited to download my resume, email me, or call</p>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <a href="../Photos/Web Dev Resume V1.pdf" download>
+                            <img class="pdfImg" src="../Photos/pdf dload.jpeg">
+                        </a>
+                    </div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+            </div>      
+            
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
