adds to contact page

--- a/other pages/HTML/contact.html
+++ b/other pages/HTML/contact.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="../CSS/contact.css">
     </head>
     <body>
@@ -20,21 +21,30 @@
             <div class="container">
                 <br>
                 <br>
+                <br>
+                <br>
                 <p class="text-center contactInvitation">You're invited to download my resume, email me, or call</p>
                 <br>
                 <div class="row">
                     <div class="col">
                         <a href="../Photos/Web Dev Resume V1.pdf" download>
-                            <img class="pdfImg" src="../Photos/pdf dload.jpeg">
+                            <p class="text-center contactInvitation contactBtn"><i class="fa fa-paperclip" aria-hidden="true"></i>  Resume</p>
                         </a>
                     </div>
-                    <div class="col"></div>
-                    <div class="col"></div>
+                    <div class="col">
+                            <a href="mailto:david.j.dumas@gmail.com" target="_top">
+                                <p class="text-center contactInvitation contactBtn"><i class="far fa-envelope"></i>  david.j.dumas@gmail.com</p>
+                            </a>                        
+                    </div>
+                    <div class="col">
+                            <a href="tel:+1-603-554-6041">
+                                <p class="text-center contactInvitation contactBtn"><i class="fas fa-phone-volume"></i>  (603)554-6041</p>
+                            </a>                        
+                    </div>
                 </div>
                 <br>
                 <br>
-                <br>
-                <br>
+                <hr class="hr1">
                 <br>
                 <br>
                 <br>
