Home page, FFN contact edits

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="col"></div>
                 <div class="col textRow">
-                    <p class="text-center knowledge1">looking back:<br><br>html, css, bootstrap, javascript, jquery, moment.js, apis, firebase, node.js</p>
+                    <p class="text-center knowledge1">looking back:<br><br>html, css, bootstrap, javascript, jquery, moment.js, apis, firebase, node.js, mysql</p>
                 </div>
                 <div class="col">
                     <p class="text-left knowledge"></p>
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col"></div>
                 <div class="col">
-                    <p class="text-center knowledge2">looking forward:<br><br>react.js, react hooks, mysql, node servers, mongo, etc</p>
+                    <p class="text-center knowledge2">looking forward:<br><br>express.js, mongo, mongoose, react.js, django</p>
                 </div>
                 <div class="col text-left knowledge">
                     
