--- a/other pages/HTML/interests.html
+++ b/other pages/HTML/interests.html
@@ -18,6 +18,22 @@
             </div>
             <div class="container">
                 <div class="row">
+                    <div class="col">
+                        <div class="card cardColor" style="width: 18rem;">
+                            <img src="../Photos/Orange.jpg" alt="" class="firstPhoto rounded">
+                            <p class="card-text cardText text-center">coffee</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="../Photos/Orange.jpg" alt="" class="firstPhoto rounded">
+                    </div>
+                    <div class="col">
+                        <img src="../Photos/Orange.jpg" alt="" class="firstPhoto rounded">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
                     <div class="col text-center">
                         <a class="text-center bottomRow bottomRowProjects" href="./projects.html">projects</a>
                     </div>
