Interests page added photos and modals

--- a/other pages/HTML/interests.html
+++ b/other pages/HTML/interests.html
@@ -20,15 +20,40 @@
                 <div class="row">
                     <div class="col">
                         <div class="card cardColor" style="width: 18rem;">
-                            <img src="../Photos/Orange.jpg" alt="" class="firstPhoto rounded">
+                            <img src="../Photos/coffee.jpg" alt="" class="firstPhoto rounded" data-toggle="modal" data-target=".coffeeModal">
                             <p class="card-text cardText text-center">coffee</p>
                         </div>
                     </div>
-                    <div class="col">
-                        <img src="../Photos/Orange.jpg" alt="" class="firstPhoto rounded">
+                    <div class="modal fade bd-example-modal-lg coffeeModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <img src="../Photos/coffee.jpg" alt="" class="photoInModal">
+                            </div>
+                        </div>
                     </div>
+    <!-- sunset -->
                     <div class="col">
-                        <img src="../Photos/Orange.jpg" alt="" class="firstPhoto rounded">
+                        <img src="../Photos/sunsetTree.jpg" alt="" class="firstPhoto rounded" data-toggle="modal" data-target=".photographyModal">
+                        <p class="card-text cardText text-center">photography</p>
+                    </div>
+                    <div class="modal fade bd-example-modal-lg photographyModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <img src="../Photos/sunsetTree.jpg" alt="" class="photoInModal">
+                            </div>
+                        </div>
+                    </div>
+    <!-- diving -->
+                    <div class="col">
+                        <img src="../Photos/freeDiving.jpg" alt="" class="firstPhoto rounded" data-toggle="modal" data-target=".divingModal">
+                        <p class="card-text cardText text-center">diving</p>
+                    </div>
+                    <div class="modal fade bd-example-modal-lg divingModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <img src="../Photos/freeDiving.jpg" alt="" class="photoInModal">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
