Removes broken hyperlink

--- a/other pages/HTML/projects.html
+++ b/other pages/HTML/projects.html
@@ -13,9 +13,9 @@
         <div class="container-fluid bodyContainer">
             <div class="row">
                 <div class="col nameCol">
-                    <a href="davidjdumas.dev">
+                    <!-- <a href="davidjdumas.dev"> -->
                         <p class="text-center makeNotBlue">David Dumas</p>
-                    </a>
+                    <!-- </a> -->
                 </div>
             </div>
             <div class="container">
