Fixes interests page

--- a/other pages/HTML/contact.html
+++ b/other pages/HTML/contact.html
@@ -47,17 +47,17 @@
                 <div class="row">
                     <div class="col text-center">
                         <a href="https://www.twitter.com/djdumas2/">
-                            <i class="fab fa-twitter contactIcon"></i>
+                            <i class="fab fa-twitter contactIcon contactIcon1" style="font-size:25px"></i>
                         </a>
                     </div>
                     <div class="col text-center">
                         <a href="https://github.com/ddumas551">
-                            <i class="fab fa-github contactIcon"></i>
+                            <i class="fab fa-github contactIcon contactIcon2" style="font-size:25px"></i>
                         </a>
                     </div>
                     <div class="col text-center">
                         <a href="https://www.linkedin.com/in/daviddumas551/">
-                            <i class="fab fa-linkedin contactIcon"></i>
+                            <i class="fab fa-linkedin contactIcon contactIcon3" style="font-size:25px"></i>
                         </a>
                     </div>
                     
