--- a/other pages/HTML/interests.html
+++ b/other pages/HTML/interests.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container bottomContainer">
                 <div class="row">
                     <div class="col text-center">
                         <a class="text-center bottomRow bottomRowProjects" href="./projects.html">projects</a>
