Updated resume, fun CSS stuff

--- a/other pages/HTML/contact.html
+++ b/other pages/HTML/contact.html
@@ -28,7 +28,7 @@
                 <br>
                 <div class="row">
                     <div class="col">
-                        <a href="../Photos/Web Dev Resume V1.pdf" download>
+                        <a href="../Photos/Web Dev Resume.pdf" download>
                             <p class="text-center contactInvitation contactBtn"><i class="fa fa-paperclip" aria-hidden="true"></i> <span></span>   Resume</p>
                         </a>
                     </div>
