--- a/other pages/HTML/contact.html
+++ b/other pages/HTML/contact.html
@@ -51,7 +51,7 @@
                         </a>
                     </div>
                     <div class="col text-center">
-                        <a href="https://github.com/ddumas551">
+                        <!-- <a href="https://github.com/ddumas551"> -->
                             <i class="fab fa-github contactIcon contactIcon2" style="font-size:25px"></i>
                         </a>
                     </div>
