--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <p class="text-center intro1">full stack web development student<br>nov '18 - may '19</p>
+                    <p class="text-center intro1">web developer</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <p class="text-center intro2">uc berkeley ext.</p>
+                    <p class="text-center intro2">uc berkeley ext.<br>full stack web development<br>nov '18 - may '19</p>
                 </div>
             </div>
             <div class="row">
