--- a/other pages/HTML/contact.html
+++ b/other pages/HTML/contact.html
@@ -27,17 +27,17 @@
                 
                 <br>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-12 col-md-4">
                         <a href="../Photos/Web Dev Resume.pdf" download>
                             <p class="text-center contactInvitation contactBtn"><i class="fa fa-paperclip" aria-hidden="true"></i> <span></span>   Resume</p>
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md-4">
                             <a href="mailto:david.j.dumas@gmail.com" target="_top">
                                 <p class="text-center contactInvitation contactBtn"><i class="far fa-envelope"></i>    david.j.dumas@gmail.com</p>
                             </a>                        
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md-4">
                             <a href="tel:+1-603-554-6041">
                                 <p class="text-center contactInvitation contactBtn"><i class="fas fa-phone-volume"></i>    (603)554-6041</p>
                             </a>                        
