--- a/other pages/HTML/projects.html
+++ b/other pages/HTML/projects.html
@@ -1,100 +1,145 @@
 <!DOCTYPE html>
 <html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Projects</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="../CSS/projects.css">
-    </head>
-    <body>
-        <div class="container-fluid bodyContainer">
-            <div class="row">
-                <div class="col nameCol">
-                    <!-- <a href="davidjdumas.dev"> -->
-                        <p class="text-center makeNotBlue">David Dumas</p>
-                    <!-- </a> -->
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col text-center bottomRow">
-                        <p>The images below are screen shots of the projects I've done, worked on, or am working on. Feel free to explore.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col text-center">
-                            <p class="bottomRow">Train Schedule</p>
-                        <a href="https://ddumas551.github.io/Train-Schedule/">
-                            <img class="fiveStarImg" src="../Photos/trainSchedule.png" alt="trainSchedule">
-                        </a>
-                        <figcaption class="bottomRow">Mock Train Schedule
-                            <br>Uses Firebase and Moment.js
-                            <br>
-                            <br>---------------<br>
-                            <br>
-                            Class Project || Completed</figcaption>
-                    </div>
-                    <div class="col text-center">
-                        <p class="bottomRow">TrailMix</p>
-                        <a href="https://ddumas551.github.io/TrailMix/">
-                            <img class="fiveStarImg" src="../Photos/TrailMix.png" alt="TrailMixSC">
-                        </a>
-                        <figcaption class="bottomRow">Location Based Hiking App
-                            <br>Uses multiple APIs to find hikes near the user
-                            <br>and Firebase for storing user comments.
-                            <br>Currently hard coded for Berkeley, CA
-                            <br>---------------<br>
-                            Group Project || Under Construction</figcaption>
-                    </div>
-                    <div class="col text-center">
-                        <p class="bottomRow">5 Star Scheduling</p>
-                        <a href="https://ddumas551.github.io/5StarMovingSchedule/">
-                            <img class="fiveStarImg" src="../Photos/5StarScheduleImg.png" alt="5StarScheduleImg">
-                        </a>
-                        <figcaption class="bottomRow">Scheduling app
-                            <br>Will allow for job info to be sent as a text
-                            <br>message through email to employees
-                            <br>
-                            <br>---------------<br>
-                            Personal Project || Under Construction</figcaption>
-                    </div>
-                </div>
-                <br>
-                <br>
-                <div class="row">
-                    <div class="col">
-                        <hr class="hr1">
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col text-center">
-                        <a class="text-center bottomRow bottomRowProjects" href="./projects.html">projects</a>
-                    </div>
-                    <!-- <div class="col text-center">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Projects</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../CSS/projects.css" />
+  </head>
+  <body>
+    <div class="container-fluid bodyContainer">
+      <div class="row">
+        <div class="col nameCol">
+          <!-- <a href="davidjdumas.dev"> -->
+          <p class="text-center makeNotBlue">David Dumas</p>
+          <!-- </a> -->
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col text-center bottomRow">
+            <p>
+              The images below are screen shots of the projects I've done,
+              worked on, or am working on. Feel free to explore.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-center">
+            <p class="bottomRow">MC Photography</p>
+            <a href="https://ddumas551.github.io/michaelPhoto/">
+              <img
+                class="fiveStarImg"
+                src="../Photos/20190716_143948.jpg"
+                alt="michaelPhoto"
+              />
+            </a>
+            <figcaption class="bottomRow">
+              Photography Website <br />Uses Bootstrap
+              <br />
+              <br />---------------<br />
+              <br />
+              Freelance Project || Under Construction
+            </figcaption>
+          </div>
+          <div class="col text-center">
+            <p class="bottomRow">TrailMix</p>
+            <a href="https://ddumas551.github.io/TrailMix/">
+              <img
+                class="fiveStarImg"
+                src="../Photos/TrailMix.png"
+                alt="TrailMixSC"
+              />
+            </a>
+            <figcaption class="bottomRow">
+              Location Based Hiking App <br />Uses multiple APIs to find hikes
+              near the user <br />and Firebase for storing user comments.
+
+              <br />---------------<br /><br />
+              Group Project
+            </figcaption>
+          </div>
+          <div class="col text-center">
+            <p class="bottomRow">5 Star Scheduling</p>
+            <a href="https://ddumas551.github.io/5StarMovingSchedule/">
+              <img
+                class="fiveStarImg"
+                src="../Photos/5StarScheduleImg.png"
+                alt="5StarScheduleImg"
+              />
+            </a>
+            <figcaption class="bottomRow">
+              Scheduling app <br />Will allow for job info to be sent as a text
+              <br />message through email to employees
+              <br />
+              <br />---------------<br />
+              Personal Project || Under Construction
+            </figcaption>
+          </div>
+        </div>
+        <br />
+        <br />
+        <div class="row">
+          <div class="col">
+            <hr class="hr1" />
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col text-center">
+            <a
+              class="text-center bottomRow bottomRowProjects"
+              href="./projects.html"
+              >projects</a
+            >
+          </div>
+          <!-- <div class="col text-center">
                         <a class="text-center bottomRow bottomRowGoals" href="./goals.html">goals</a>
                     </div> -->
-                    <div class="col text-center">
-                        <a class="text-center bottomRow bottomRowInterests" href="./interests.html">interests</a>
-                    </div>
-                    <div class="col text-center">
-                        <a class="text-center bottomRow bottomRowInterests" href="./contact.html">contact</a>
-                    </div>
-                </div>
-                <br>
-                <br>
-                <br>
-            </div>
+          <div class="col text-center">
+            <a
+              class="text-center bottomRow bottomRowInterests"
+              href="./interests.html"
+              >interests</a
+            >
+          </div>
+          <div class="col text-center">
+            <a
+              class="text-center bottomRow bottomRowInterests"
+              href="./contact.html"
+              >contact</a
+            >
+          </div>
         </div>
+        <br />
+        <br />
+        <br />
+      </div>
+    </div>
 
-
-        
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="../JS/projects.js" async defer></script>
-    </body>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../JS/projects.js" async defer></script>
+  </body>
 </html>
