--- a/other pages/HTML/projects.html
+++ b/other pages/HTML/projects.html
@@ -43,7 +43,7 @@
               />
             </a>
             <figcaption class="bottomRow">
-              Photography Website <br />Uses Bootstrap
+              Photography Website -Mobile only per request- <br />Uses Bootstrap
               <br />
               <br />---------------<br />
               <br />
