Adds project gif

--- a/index.html
+++ b/index.html
@@ -16,9 +16,44 @@
   </head>
   <body>
     <div class="container-fluid bodyContainer">
-      <div class="row">
-        <div class="col nameCol">
-          <p class="text-center">David Dumas</p>
+      <div class="row nameRow justify-content-center">
+        <div class="col-12 col-md-6">
+          <div class="row">
+            <div class="col letter">
+              <p>D</p>
+            </div>
+            <div class="col letter">
+              <p>A</p>
+            </div>
+            <div class="col letter">
+              <p>V</p>
+            </div>
+            <div class="col letter">
+              <p>I</p>
+            </div>
+            <div class="col letter">
+              <p>D</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6">
+          <div class="row">
+            <div class="col letter">
+              <p>D</p>
+            </div>
+            <div class="col letter">
+              <p>U</p>
+            </div>
+            <div class="col letter">
+              <p>M</p>
+            </div>
+            <div class="col letter">
+              <p>A</p>
+            </div>
+            <div class="col letter">
+              <p>S</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row">
