--- a/other pages/HTML/projects.html
+++ b/other pages/HTML/projects.html
@@ -38,7 +38,7 @@
             <a href="https://ddumas551.github.io/michaelPhoto/">
               <img
                 class="fiveStarImg"
-                src="../Photos/20190716_143948.jpg"
+                src="../Photos/SmartSelect_20190807-163535_Chrome.gif"
                 alt="michaelPhoto"
               />
             </a>
