--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container-fluid bodyContainer">
       <div class="row nameRow justify-content-center">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-sm-12 col-md-6">
           <div class="row">
             <div class="col letter">
               <p>D</p>
@@ -36,7 +36,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-sm-12 col-md-6">
           <div class="row">
             <div class="col letter">
               <p>D</p>
@@ -107,9 +107,6 @@
               >projects</a
             >
           </div>
-          <!-- <div class="col-3 text-center">
-                        <a class="bottomRow bottomRowGoals" href="./other pages/HTML/goals.html">goals</a>
-                    </div> -->
           <div class="col text-center">
             <a
               class="bottomRow bottomRowInterests"
