--- a/index.html
+++ b/index.html
@@ -19,38 +19,38 @@
       <div class="row nameRow justify-content-center">
         <div class="col-12 col-sm-12 col-md-6">
           <div class="row">
-            <div class="col letter">
+            <div class="col letter letter1">
               <p>D</p>
             </div>
-            <div class="col letter">
+            <div class="col letter letter2">
               <p>A</p>
             </div>
-            <div class="col letter">
+            <div class="col letter letter3">
               <p>V</p>
             </div>
-            <div class="col letter">
+            <div class="col letter letter4">
               <p>I</p>
             </div>
-            <div class="col letter">
+            <div class="col letter letter5">
               <p>D</p>
             </div>
           </div>
         </div>
         <div class="col-12 col-sm-12 col-md-6">
           <div class="row">
-            <div class="col letter">
+            <div class="col letter letter6">
               <p>D</p>
             </div>
-            <div class="col letter">
+            <div class="col letter letter7">
               <p>U</p>
             </div>
-            <div class="col letter">
+            <div class="col letter letter8">
               <p>M</p>
             </div>
-            <div class="col letter">
+            <div class="col letter  letter9">
               <p>A</p>
             </div>
-            <div class="col letter">
+            <div class="col letter  letter10">
               <p>S</p>
             </div>
           </div>
@@ -80,8 +80,8 @@
         <div class="col"></div>
         <div class="col textRow">
           <p class="text-center knowledge1">
-            looking back:<br /><br />html, css, bootstrap, javascript, firebase,
-            node.js, mysql, express.js, mongoDB, react.js
+            experience with:<br /><br />html, css, bootstrap, javascript,
+            firebase, node.js, mysql, express.js, mongoDB, react.js
           </p>
         </div>
         <div class="col">
@@ -92,7 +92,7 @@
         <div class="col"></div>
         <div class="col">
           <p class="text-center knowledge2">
-            looking forward:<br /><br />python, angular, wordpress
+            looking forward:<br /><br />python, raspberry pi, angular, wordpress
           </p>
         </div>
         <div class="col text-left knowledge"></div>
@@ -101,23 +101,17 @@
       <div class="container">
         <div class="row">
           <div class="col text-center">
-            <a
-              class="bottomRow bottomRowProjects"
-              href="./other pages/HTML/projects.html"
+            <a class="bottomRow bottomRowProjects" href="./projects.html"
               >projects</a
             >
           </div>
           <div class="col text-center">
-            <a
-              class="bottomRow bottomRowInterests"
-              href="./other pages/HTML/interests.html"
+            <a class="bottomRow bottomRowInterests" href="./interests.html"
               >interests</a
             >
           </div>
           <div class="col text-center">
-            <a
-              class="bottomRow bottomRowInterests"
-              href="./other pages/HTML/contact.html"
+            <a class="bottomRow bottomRowInterests" href="./contact.html"
               >contact</a
             >
           </div>
@@ -128,11 +122,7 @@
       </div>
     </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
