--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous"
+  />
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
@@ -56,69 +62,118 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row wdRow">
         <div class="col">
           <p class="text-center intro1">web developer</p>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <p class="text-center intro2">
+          <p class="text-center intro1">
             uc berkeley ext.<br />full stack web development<br />nov '18 - may
             '19
           </p>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
-          <hr class="hr1" />
-        </div>
-      </div>
-      <br />
-      <br />
-      <div class="row">
-        <div class="col"></div>
-        <div class="col textRow">
-          <p class="text-center knowledge1">
-            experience with:<br /><br />html, css, bootstrap, javascript,
-            firebase, node.js, mysql, express.js, mongoDB, react.js
-          </p>
-        </div>
-        <div class="col">
-          <p class="text-left knowledge"></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col"></div>
-        <div class="col">
-          <p class="text-center knowledge2">
-            looking forward:<br /><br />python, raspberry pi, angular, wordpress
-          </p>
-        </div>
-        <div class="col text-left knowledge"></div>
-      </div>
-      <br />
-      <div class="container">
-        <div class="row">
-          <div class="col text-center">
-            <a class="bottomRow bottomRowProjects" href="./projects.html"
-              >projects</a
-            >
-          </div>
-          <div class="col text-center">
-            <a class="bottomRow bottomRowInterests" href="./interests.html"
-              >interests</a
-            >
-          </div>
-          <div class="col text-center">
-            <a class="bottomRow bottomRowInterests" href="./contact.html"
-              >contact</a
-            >
+      <hr class="hr1" />
+      <div class="row justify-content-center elrRow">
+        <div class="col underHR">
+          <div class="row">
+            <div class="col-6 text-right intro1">experience with:</div>
+            <div class="col-6 intro1">
+              html-5, css, javascript, bootstrap, firebase, mysql, mongoDB,
+              react.js
+            </div>
           </div>
         </div>
-        <br />
-        <br />
-        <br />
+      </div>
+      <div class="row justify-content-center">
+        <div class="col underHR">
+          <div class="row">
+            <div class="col-6 text-right intro1">looking forward:</div>
+            <div class="col-6 intro1">
+              python, angular, wordpress
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col underHR">
+          <div class="row">
+            <div class="col-6 text-right intro1">related experience:</div>
+            <div class="col-6 intro1">
+              june '19 - present<br />catchfire creative | freelance
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row projectsRow">
+        <div class="col text-center">
+          <a class="bottomRow bottomRowProjects" href="./projects.html"
+            >projects  
+            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-8">
+          <div class="row justify-content-center contactRow">
+            <div class="col-12 col-md-4 xyz">
+              <a href="./src/Photos/Resume_16102019.pdf" download>
+                <p class="text-center contactBtn">
+                  <i class="fa fa-paperclip" aria-hidden="true"></i>
+                  Resume
+                </p>
+              </a>
+            </div>
+            <div class="col-12 col-md-4 xyz">
+              <a href="mailto:david.j.dumas@gmail.com" target="_top">
+                <p class="text-center contactBtn">
+                  <i class="far fa-envelope"></i> david.j.dumas@gmail.com
+                </p>
+              </a>
+            </div>
+            <div class="col-12 col-md-4 xyz">
+              <a href="tel:+1-603-554-6041">
+                <p class="text-center contactBtn">
+                  <i class="fas fa-phone-volume"></i> (603)554-6041
+                </p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-8">
+            <div class="row socialRow">
+                <div class="col text-center">
+                  <a href="https://www.twitter.com/djdumas2/" target="_blank">
+                    <i
+                      class="fab fa-twitter contactIcon contactIcon1"
+                      style="font-size:25px"
+                    ></i>
+                  </a>
+                </div>
+                <div class="col text-center">
+                  <a href="https://github.com/ddumas551" target="_blank">
+                    <i
+                      class="fab fa-github contactIcon contactIcon2"
+                      style="font-size:25px"
+                    ></i>
+                  </a>
+                </div>
+                <div class="col text-center">
+                  <a href="https://www.linkedin.com/in/daviddumas551/" target="_blank">
+                    <i
+                      class="fab fa-linkedin contactIcon contactIcon3"
+                      style="font-size:25px"
+                    ></i>
+                  </a>
+                </div>
+              </div>
+        </div>
+      </div>
+
       </div>
     </div>
 
