--- a/projects.html
+++ b/projects.html
@@ -115,44 +115,11 @@
             </figcaption>
           </div>
         </div>
-        <br />
-        <br />
-        <!-- Don't change below this line doo dee doo dee doo dee doo dee doo dee doo dee doo dee doo dee -->
-        <div class="row">
-          <div class="col">
-            <hr class="hr1" />
+        <div class="row bottomRow">
+          <div class="col text-center">
+            <a href="./index.html"><p class="backRow">home</p></a>
           </div>
         </div>
-        <br />
-        <div class="row">
-          <div class="col text-center">
-            <a
-              class="text-center bottomRow bottomRowProjects"
-              href="./index.html"
-              >home</a
-            >
-          </div>
-          <!-- <div class="col text-center">
-                        <a class="text-center bottomRow bottomRowGoals" href="./goals.html">goals</a>
-                    </div> -->
-          <div class="col text-center">
-            <a
-              class="text-center bottomRow bottomRowInterests"
-              href="./interests.html"
-              >interests</a
-            >
-          </div>
-          <div class="col text-center">
-            <a
-              class="text-center bottomRow bottomRowInterests"
-              href="./contact.html"
-              >contact</a
-            >
-          </div>
-        </div>
-        <br />
-        <br />
-        <br />
       </div>
     </div>
 
