Adds Dissolved Solids to Projects

--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,7 @@
             </p>
           </div>
         </div>
+        <!-- MC Photo -->
         <div class="row">
           <div class="col text-center">
             <p class="bottomRow projTitle">MC Photography</p>
@@ -81,6 +82,7 @@
               Freelance Project || Under Construction
             </figcaption>
           </div>
+          <!-- Trail Mix -->
           <div class="col text-center">
             <p class="bottomRow projTitle">TrailMix</p>
             <a href="https://ddumas551.github.io/TrailMix/">
@@ -98,18 +100,22 @@
               Group Project at UCB Ext
             </figcaption>
           </div>
+          <!-- Dissolved Solids -->
           <div class="col text-center">
-            <p class="bottomRow projTitle">5 Star Scheduling</p>
-            <a href="https://ddumas551.github.io/5StarMovingSchedule/">
+            <p class="bottomRow projTitle">Dissolved Solids</p>
+            <a href="https://github.com/DDumas551/DissolvedSolids">
               <img
                 class="fiveStarImg"
-                src="./src/Photos/5StarScheduleImg.png"
-                alt="5StarScheduleImg"
+                src="./src/Photos/DS.jpg"
+                alt="DissolvedSolids"
               />
             </a>
             <figcaption class="bottomRow">
-              Scheduling app <br />Will allow for job info to be sent as a text
-              <br />message through email to employees
+              Homebrewing Website<br />Will allow users to create, save, edit,
+              and delete beer recipes. Includes brewing calculators, checklists,
+              and general info on brewing <br />
+              Built in React.js with Bootstrap, Firebase as the database,
+              moment.js to handle time
               <br />
               Personal Project || Under Construction
             </figcaption>
