--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="row justify-content-center">
         <div class="col-8">
           <div class="row justify-content-center contactRow">
-            <div class="col-12 col-md-4 xyz">
+            <div class="col-12 col-md-4 intro1">
               <a href="./src/Photos/Resume_16102019.pdf" download>
                 <p class="text-center contactBtn">
                   <i class="fa fa-paperclip" aria-hidden="true"></i>
@@ -126,14 +126,14 @@
                 </p>
               </a>
             </div>
-            <div class="col-12 col-md-4 xyz">
+            <div class="col-12 col-md-4">
               <a href="mailto:david.j.dumas@gmail.com" target="_top">
                 <p class="text-center contactBtn">
                   <i class="far fa-envelope"></i> david.j.dumas@gmail.com
                 </p>
               </a>
             </div>
-            <div class="col-12 col-md-4 xyz">
+            <div class="col-12 col-md-4">
               <a href="tel:+1-603-554-6041">
                 <p class="text-center contactBtn">
                   <i class="fas fa-phone-volume"></i> (603)554-6041
