Edits Info and fades

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <div class="row wdRow">
         <div class="col">
-          <p class="text-center intro1">web developer</p>
+          <p class="text-center intro1">software engineer | web developer</p>
         </div>
       </div>
       <div class="row">
@@ -77,18 +77,18 @@
       </div>
       <hr class="hr1" />
       <div class="row justify-content-center elrRow">
-        <div class="col underHR">
+        <div class="col deetsCol">
           <div class="row">
             <div class="col-6 text-right intro1">experience with:</div>
             <div class="col-6 intro1">
-              html-5, css, javascript, bootstrap, firebase, mysql, mongoDB,
+              html-5, css3, javascript, bootstrap, firebase, mysql, mongoDB,
               react.js
             </div>
           </div>
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col underHR">
+        <div class="col deetsCol">
           <div class="row">
             <div class="col-6 text-right intro1">looking forward:</div>
             <div class="col-6 intro1">
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col underHR">
+        <div class="col deetsCol">
           <div class="row">
             <div class="col-6 text-right intro1">related experience:</div>
             <div class="col-6 intro1">
