Adds animation to Project arrow and gear bullet points to exp

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
             <div class="col-6 text-right intro1">experience with:</div>
             <div class="col-6 intro1">
               html-5, css3, javascript, bootstrap, firebase, mysql, mongoDB,
-              react.js
+              react 16+, react hooks
             </div>
           </div>
         </div>
       </div>
-      <div class="row justify-content-center">
+      <!-- <div class="row justify-content-center">
         <div class="col deetsCol">
           <div class="row">
             <div class="col-6 text-right intro1">looking forward:</div>
@@ -96,22 +96,27 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
+      <br />
       <div class="row justify-content-center">
         <div class="col deetsCol">
           <div class="row">
             <div class="col-6 text-right intro1">related experience:</div>
             <div class="col-6 intro1">
-              june '19 - present<br />catchfire creative | freelance
+              <i class="fa fa-cog" aria-hidden="true"></i> june '19 - present<br /><div class="pushOver">catchfire creative | freelance</div>
+            </div>
+            <br />            <br />
+            <div class="offset-6 col-6 intro1">
+              <i class="fa fa-cog" aria-hidden="true"></i> october '19 - present<br /><div class="pushOver">dissolved solids | personal project</div>
             </div>
           </div>
         </div>
       </div>
       <div class="row projectsRow">
         <div class="col text-center">
-          <a class="bottomRow bottomRowProjects" href="./projects.html"
+          <a class="bottomRow bottomRowProjects textDecorationNone" href="./projects.html"
             >projects  
-            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+            <i class="fa fa-arrow-right iLikeToMoveIt" aria-hidden="true"></i>
           </a>
         </div>
       </div>
