Minor additions to animations and adds background color to buttons

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="row">
             <div class="col-6 text-right intro1">experience with:</div>
             <div class="col-6 intro1">
-              html-5, css3, javascript, bootstrap, firebase, mysql, mongoDB,
+              html-5, css3, javascript es6, bootstrap, firebase, mysql, mongoDB,
               react 16+, react hooks
             </div>
           </div>
