--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="col-8">
           <div class="row justify-content-center contactRow">
             <div class="col-12 col-md-4 intro1">
-              <a href="./src/Photos/Resume_16102019.pdf" download>
+              <a href="./src/Photos/Resume2ptOh.pdf" download>
                 <p class="text-center contactBtn">
                   <i class="fa fa-paperclip" aria-hidden="true"></i>
                   Resume
