--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col text-center">
             <p class="bottomRow projTitle">MC Photography</p>
-            <a href="https://ddumas551.github.io/michaelPhoto/">
+            <a href="https://ddumas551.github.io/mcPhoto/">
               <img
                 class="fiveStarImg"
                 src="./src/Photos/SmartSelect_20190807-163535_Chrome.gif"
