--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
         <!-- MC Photo -->
         <div class="row">
           <div class="col text-center">
-            <p class="bottomRow projTitle">MC Photography</p>
+            <p class="bottomRow projTitle"><u>MC Photography</u></p>
             <a href="https://ddumas551.github.io/mcPhoto/">
               <img
                 class="fiveStarImg"
@@ -77,14 +77,15 @@
               />
             </a>
             <figcaption class="bottomRow">
-              Photography Website -Mobile only per request- <br />Uses Bootstrap
+              <u>Photography Website -Mobile only per request-</u> <br />Uses
+              Bootstrap
               <br />
               Freelance Project || Under Construction
             </figcaption>
           </div>
           <!-- Trail Mix -->
           <div class="col text-center">
-            <p class="bottomRow projTitle">TrailMix</p>
+            <p class="bottomRow projTitle"><u>TrailMix</u></p>
             <a href="https://ddumas551.github.io/TrailMix/">
               <img
                 class="fiveStarImg"
@@ -102,7 +103,7 @@
           </div>
           <!-- Dissolved Solids -->
           <div class="col text-center">
-            <p class="bottomRow projTitle">Dissolved Solids</p>
+            <p class="bottomRow projTitle"><u>Dissolved Solids</u></p>
             <a href="https://github.com/DDumas551/DissolvedSolids">
               <img
                 class="fiveStarImg"
