--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
           <div class="row">
             <div class="col-6 text-right intro1">related experience:</div>
             <div class="col-6 intro1">
-              <i class="fa fa-cog" aria-hidden="true"></i> june '19 - present<br /><div class="pushOver">catchfire creative | freelance</div>
+              <i class="fa fa-cog" aria-hidden="true"></i> jun '19 - present<br /><div class="pushOver">catchfire creative | freelance</div>
             </div>
             <br />            <br />
             <div class="offset-6 col-6 intro1">
-              <i class="fa fa-cog" aria-hidden="true"></i> october '19 - present<br /><div class="pushOver">dissolved solids | personal project</div>
+              <i class="fa fa-cog" aria-hidden="true"></i> oct '19 - present<br /><div class="pushOver">dissolved solids | personal project</div>
             </div>
           </div>
         </div>
@@ -124,7 +124,7 @@
         <div class="col-8">
           <div class="row justify-content-center contactRow">
             <div class="col-12 col-md-4 intro1">
-              <a href="./src/Photos/Resume2ptOh.pdf" download>
+              <a href="./src/Photos/resume18_4_20.pdf" download>
                 <p class="text-center contactBtn">
                   <i class="fa fa-paperclip" aria-hidden="true"></i>
                   Resume
